// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconEN /> should adopt the "isSelected" property 1`] = `
<SVGIcon
  isSelected={true}
  viewBox="0 0 60 30"
>
  <clipPath
    id="t"
  >
    <path
      d="M30,15 h30 v15 z v15 h-30 z h-30 v-15 z v-15 h30 z"
    />
  </clipPath>
  <filter
    id="icon-en-saturate"
  >
    <feColorMatrix
      in="SourceGraphic"
      type="saturate"
      values="1.5"
    />
  </filter>
  <g
    filter="url(#icon-en-saturate)"
  >
    <path
      d="M0,0 v30 h60 v-30 z"
      fill="#00247d"
    />
    <path
      d="M0,0 L60,30 M60,0 L0,30"
      stroke="#fff"
      strokeWidth="6"
    />
    <path
      clipPath="url(#t)"
      d="M0,0 L60,30 M60,0 L0,30"
      stroke="#cf142b"
      strokeWidth="4"
    />
    <path
      d="M30,0 v30 M0,15 h60"
      stroke="#fff"
      strokeWidth="10"
    />
    <path
      d="M30,0 v30 M0,15 h60"
      stroke="#cf142b"
      strokeWidth="6"
    />
  </g>
</SVGIcon>
`;

exports[`<IconEN /> should render and match the snapshot 1`] = `
<SVGIcon
  viewBox="0 0 60 30"
>
  <clipPath
    id="t"
  >
    <path
      d="M30,15 h30 v15 z v15 h-30 z h-30 v-15 z v-15 h30 z"
    />
  </clipPath>
  <filter
    id="icon-en-saturate"
  >
    <feColorMatrix
      in="SourceGraphic"
      type="saturate"
      values="0.5"
    />
  </filter>
  <g
    filter="url(#icon-en-saturate)"
  >
    <path
      d="M0,0 v30 h60 v-30 z"
      fill="#00247d"
    />
    <path
      d="M0,0 L60,30 M60,0 L0,30"
      stroke="#fff"
      strokeWidth="6"
    />
    <path
      clipPath="url(#t)"
      d="M0,0 L60,30 M60,0 L0,30"
      stroke="#cf142b"
      strokeWidth="4"
    />
    <path
      d="M30,0 v30 M0,15 h60"
      stroke="#fff"
      strokeWidth="10"
    />
    <path
      d="M30,0 v30 M0,15 h60"
      stroke="#cf142b"
      strokeWidth="6"
    />
  </g>
</SVGIcon>
`;
